--- a/api/package.json
+++ b/api/package.json
@@ -43,7 +43,7 @@
     "apidoc": "^0.17.7",
     "array-to-tree": "^3.3.0",
     "aws-sdk": "^2.391.0",
-    "bcrypt": "3.0.1",
+    "bcrypt": "^5.0.1",
     "chalk": "^2.4.1",
     "class-transformer-validator": "^0.7.1",
     "class-validator": "^0.8.1",
@@ -103,9 +103,9 @@
     "type-graphql": "^0.15.0",
     "typedi": "0.8.0",
     "typeorm": "^0.2.18",
-    "typeorm-seeding": "^1.0.0-beta.6",
+    "typeorm-seeding": "^1.6.1",
     "typeorm-typedi-extensions": "^0.2.1",
-    "typescript": "3.0.3",
+    "typescript": "3.7.3",
     "uuid": "^3.3.2",
     "winston": "3.1.0"
   },
