--- a/admin/package.json
+++ b/admin/package.json
@@ -16,89 +16,88 @@
     },
     "private": true,
     "dependencies": {
-        "@angular-devkit/schematics": "^7.3.8",
-        "@angular/animations": "~7.1.0",
-        "@angular/cdk": "^7.2.2",
-        "@angular/common": "~7.1.0",
-        "@angular/compiler": "~7.1.0",
-        "@angular/core": "^7.2.12",
-        "@angular/forms": "~7.1.0",
+        "@angular-devkit/schematics": "^11.2.3",
+        "@angular/animations": "~11.2.4",
+        "@angular/cdk": "^11.2.3",
+        "@angular/common": "~11.2.4",
+        "@angular/compiler": "~11.2.4",
+        "@angular/core": "^11.2.4",
+        "@angular/forms": "~11.2.4",
         "@angular/http": "~7.1.0",
-        "@angular/material": "^7.2.2",
-        "@angular/platform-browser": "~7.1.0",
-        "@angular/platform-browser-dynamic": "~7.1.0",
-        "@angular/platform-server": "^7.2.11",
-        "@angular/router": "~7.1.0",
-        "@angular/service-worker": "^7.2.2",
-        "@ng-bootstrap/ng-bootstrap": "^4.1.0",
+        "@angular/material": "^11.2.3",
+        "@angular/platform-browser": "~11.2.4",
+        "@angular/platform-browser-dynamic": "~11.2.4",
+        "@angular/platform-server": "^11.2.4",
+        "@angular/router": "~11.2.4",
+        "@angular/service-worker": "^11.2.4",
+        "@ng-bootstrap/ng-bootstrap": "^9.0.2",
         "@ngrx/core": "^1.2.0",
-        "@ngrx/effects": "^7.3.0",
-        "@ngrx/router-store": "^7.1.0",
-        "@ngrx/store": "^7.3.0",
-        "@ngrx/store-devtools": "^7.1.0",
-        "@swimlane/ngx-charts": "^10.0.0",
-        "@swimlane/ngx-datatable": "^14.0.0",
+        "@ngrx/effects": "^11.0.1",
+        "@ngrx/router-store": "^11.0.1",
+        "@ngrx/store": "^11.0.1",
+        "@ngrx/store-devtools": "^11.0.1",
+        "@swimlane/ngx-charts": "^17.0.1",
+        "@swimlane/ngx-datatable": "^19.0.0",
         "angular-io-datepicker": "^1.3.1",
-        "angular-material": "^1.1.12",
+        "angular-material": "^1.2.2",
         "angular-moment-timezone": "^1.7.1",
         "angular4-color-picker": "^1.4.2",
         "arraylist-to-tree": "^1.1.0",
-        "bootstrap": "^4.2.1",
-        "core-js": "^2.6.3",
+        "bootstrap": "^4.6.0",
+        "core-js": "^3.9.1",
         "cors": "^2.8.5",
-        "file-saver": "^2.0.2",
-        "helmet": "^3.16.0",
-        "http-server": "^0.11.1",
+        "file-saver": "^2.0.5",
+        "helmet": "^4.4.1",
+        "http-server": "^0.12.3",
         "immutable": "^3.8.2",
-        "jquery": "^3.3.1",
-        "lodash": "^4.17.11",
-        "moment": "^2.24.0",
+        "jquery": "^3.6.0",
+        "lodash": "^4.17.21",
+        "moment": "^2.29.1",
         "ng-bootstrap-dropdown": "^1.0.0",
-        "ng2-ckeditor": "1.2.1",
+        "ng2-ckeditor": "^1.3.1",
         "ng6-toastr-notifications": "^1.0.4",
         "ngrx-store-freeze": "^0.2.4",
-        "ngx-color-picker": "^7.3.1",
-        "ngx-perfect-scrollbar": "^7.1.0",
-        "ngx-select-dropdown": "^1.0.1",
+        "ngx-color-picker": "^11.0.0",
+        "ngx-perfect-scrollbar": "^10.1.0",
+        "ngx-select-dropdown": "^1.5.0",
         "oftype": "^0.1.2",
-        "pdfmake": "^0.1.50",
+        "pdfmake": "^0.1.70",
         "reselect": "^4.0.0",
-        "rxjs": "6.0.0",
-        "rxjs-compat": "6.0.0",
-        "selenium-webdriver": "^4.0.0-alpha.4",
-        "ts-loader": "^5.3.3",
-        "tslib": "^1.9.0",
-        "underscore": "^1.9.1",
-        "webpack-cli": "^3.3.0",
-        "zone.js": "^0.8.29"
+        "rxjs": "6.6.6",
+        "rxjs-compat": "6.6.6",
+        "selenium-webdriver": "^4.0.0-beta.1",
+        "ts-loader": "^8.0.17",
+        "tslib": "^2.1.0",
+        "underscore": "^1.12.0",
+        "zone.js": "^0.11.4"
     },
     "devDependencies": {
-        "@angular-builders/custom-webpack": "^7.4.3",
-        "@angular-devkit/build-angular": "^0.13.0",
-        "@angular-devkit/core": "^7.2.3",
-        "@angular/cli": "^6.0.8",
-        "@angular/compiler-cli": "~7.1.0",
-        "@angular/language-service": "~7.1.0",
-        "@schematics/angular": "^7.3.7",
-        "@types/jasmine": "^2.8.16",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "^8.10.45",
-        "codelyzer": "~4.5.0",
-        "husky": "^2.4.1",
-        "jasmine-core": "~2.99.1",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~3.1.1",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-coverage-istanbul-reporter": "~2.0.1",
-        "karma-jasmine": "~1.1.2",
-        "karma-jasmine-html-reporter": "^0.2.2",
+        "@angular-builders/custom-webpack": "^11.1.0",
+        "@angular-devkit/build-angular": "^0.1102.3",
+        "@angular-devkit/core": "^11.2.3",
+        "@angular/cli": "^11.2.3",
+        "@angular/compiler-cli": "~11.2.4",
+        "@angular/language-service": "~11.2.4",
+        "@schematics/angular": "^11.2.3",
+        "@types/jasmine": "^3.6.6",
+        "@types/jasminewd2": "~2.0.8",
+        "@types/node": "^14.14.32",
+        "codelyzer": "~6.0.1",
+        "husky": "^5.1.3",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~6.0.0",
+        "karma": "~6.1.1",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.3",
+        "karma-jasmine": "~4.0.1",
+        "karma-jasmine-html-reporter": "^1.5.4",
         "pre-commit": "^1.2.2",
-        "protractor": "~5.4.0",
-        "ts-node": "~7.0.0",
-        "tslint": "~5.11.0",
-        "typescript": "3.1.6",
-        "webpack-cli": "^3.1.0",
-        "ws": "^6.0.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~9.1.1",
+        "tslint": "~5.20.1",
+        "typescript": "^4.1.5",
+        "webpack-cli": "^4.5.0",
+        "ws": "^7.4.4",
         "xmlhttprequest": "^1.8.0"
     }
 }
