--- a/store/package.json
+++ b/store/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "ng serve --port 4205",
         "build": "ng build",
         "test": "ng test",
         "lint": "ng lint",
@@ -16,74 +16,76 @@
     },
     "private": true,
     "dependencies": {
-        "@agm/core": "^1.0.0-beta.3",
-        "@angular/animations": "7.0.4",
-        "@angular/cdk": "^7.3.7",
-        "@angular/common": "7.0.4",
-        "@angular/compiler": "7.0.4",
-        "@angular/core": "7.0.4",
-        "@angular/flex-layout": "7.0.0-beta.19",
-        "@angular/forms": "7.0.4",
+        "@agm/core": "^3.0.0-beta.0",
+        "@angular/animations": "11.2.5",
+        "@angular/cdk": "^11.2.4",
+        "@angular/common": "11.2.5",
+        "@angular/compiler": "11.2.5",
+        "@angular/core": "11.2.5",
+        "@angular/flex-layout": "11.0.0-beta.33",
+        "@angular/forms": "11.2.5",
         "@angular/http": "7.0.4",
-        "@angular/material": "7.0.4",
-        "@angular/platform-browser": "7.0.4",
-        "@angular/platform-browser-dynamic": "7.0.4",
-        "@angular/platform-server": "^7.2.11",
-        "@angular/router": "7.0.4",
-        "@angular/service-worker": "7.0.4",
-        "@fortawesome/angular-fontawesome": "^0.3.0",
-        "@fortawesome/fontawesome-svg-core": "^1.2.18",
-        "@fortawesome/free-brands-svg-icons": "^5.8.2",
-        "@fortawesome/free-solid-svg-icons": "^5.8.2",
-        "@ng-bootstrap/ng-bootstrap": "^4.1.3",
+        "@angular/material": "11.2.4",
+        "@angular/platform-browser": "11.2.5",
+        "@angular/platform-browser-dynamic": "11.2.5",
+        "@angular/platform-server": "^11.2.5",
+        "@angular/router": "11.2.5",
+        "@angular/service-worker": "11.2.5",
+        "@fortawesome/angular-fontawesome": "^0.8.2",
+        "@fortawesome/fontawesome-svg-core": "^1.2.34",
+        "@fortawesome/free-brands-svg-icons": "^5.15.2",
+        "@fortawesome/free-solid-svg-icons": "^5.15.2",
+        "@ng-bootstrap/ng-bootstrap": "^9.0.2",
         "@ngrx/core": "^1.2.0",
-        "@ngrx/effects": "^7.2.0",
-        "@ngrx/store": "^7.2.0",
-        "@ngrx/store-devtools": "^7.2.0",
+        "@ngrx/effects": "^11.0.1",
+        "@ngrx/store": "^11.0.1",
+        "@ngrx/store-devtools": "^11.0.1",
         "@ngx-share/button": "^7.1.2",
         "@ngx-share/core": "^7.1.2",
         "angular-6-social-login": "^1.1.1",
-        "core-js": "2.5.7",
-        "file-saver": "^1.3.8",
+        "core-js": "3.9.1",
+        "file-saver": "^2.0.5",
         "hammerjs": "2.0.8",
         "immutable": "^4.0.0-rc.12",
         "jw-angular-social-buttons": "^1.0.0",
-        "ng-starrating": "^1.0.6",
-        "ngx-bar-rating": "^1.1.0",
-        "ngx-pagination": "3.2.1",
-        "ngx-perfect-scrollbar": "7.0.0",
-        "ngx-sharebuttons": "^4.1.4",
-        "ngx-spinner": "6.1.2",
-        "ngx-swiper-wrapper": "^7.0.0",
-        "pdfmake": "^0.1.58",
+        "ng-starrating": "^1.0.20",
+        "ngx-bar-rating": "^2.0.0",
+        "ngx-pagination": "5.0.0",
+        "ngx-perfect-scrollbar": "10.1.0",
+        "ngx-sharebuttons": "^8.0.5",
+        "ngx-spinner": "10.0.1",
+        "ngx-swiper-wrapper": "^10.0.0",
+        "pdfmake": "^0.1.70",
         "reselect": "^4.0.0",
-        "rxjs": "6.3.3",
-        "rxjs-compat": "6.3.3",
-        "ts-loader": "^5.3.3",
-        "webpack-cli": "^3.3.0",
-        "zone.js": "0.8.26"
+        "rxjs": "6.6.6",
+        "rxjs-compat": "6.6.6",
+        "swiper": "^6.5.0",
+        "ts-loader": "^8.0.18",
+        "webpack-cli": "^4.5.0",
+        "zone.js": "0.11.4"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.10.6",
-        "@angular/cli": "7.0.6",
-        "@angular/compiler-cli": "7.0.4",
-        "@angular/language-service": "7.0.4",
-        "@types/jasmine": "3.0.0",
-        "@types/jasminewd2": "2.0.6",
-        "@types/node": "10.12.9",
-        "codelyzer": "4.5.0",
-        "husky": "^2.4.1",
-        "jasmine-core": "3.3.0",
-        "jasmine-spec-reporter": "4.2.1",
-        "karma": "3.1.1",
-        "karma-chrome-launcher": "2.2.0",
-        "karma-coverage-istanbul-reporter": "2.0.4",
-        "karma-jasmine": "2.0.1",
-        "karma-jasmine-html-reporter": "1.4.0",
+        "@angular-devkit/build-angular": "0.1102.4",
+        "@angular/cli": "11.2.4",
+        "@angular/compiler-cli": "11.2.5",
+        "@angular/language-service": "11.2.5",
+        "@types/googlemaps": "^3.39.12",
+        "@types/jasmine": "3.6.6",
+        "@types/jasminewd2": "2.0.8",
+        "@types/node": "14.14.33",
+        "codelyzer": "6.0.1",
+        "husky": "^5.1.3",
+        "jasmine-core": "3.6.0",
+        "jasmine-spec-reporter": "6.0.0",
+        "karma": "6.2.0",
+        "karma-chrome-launcher": "3.1.0",
+        "karma-coverage-istanbul-reporter": "3.0.3",
+        "karma-jasmine": "4.0.1",
+        "karma-jasmine-html-reporter": "1.5.4",
         "pre-commit": "^1.2.2",
-        "protractor": "5.4.1",
-        "ts-node": "7.0.1",
-        "tslint": "5.11.0",
-        "typescript": "3.1.6"
+        "protractor": "7.0.0",
+        "ts-node": "9.1.1",
+        "tslint": "5.20.1",
+        "typescript": "^4.1.5"
     }
 }
